Change python container

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,13 +5,15 @@ on:
     branches:
       - master
   pull_request:
+    branches:
+      - master
 
 jobs:
   build:
 
     runs-on: ubuntu-20.04
 
-    container: python:3.6-slim-buster
+    container: python:3.6-buster
 
     steps:
     - uses: actions/checkout@v2
